[b][color=orange]v4.40 for Patch 8.3[/color], 15.01.2020[/b][list]
[*]Code update/fixes for Patch 8.3.
[*]Small Layout updates.
[*]Added a Killing Blow feature. Credits: Shadow & Light.
[*]Added a friend counter on the Friends Frame.
[*]Readd compatibility code. Credits: NihilisticPandemonium.
[*]Updated GothamNarrow Font.
[*]Added a CVar options.
[*]Added a random toy macro. See misc options.
[*]Change the guild rank color in tooltip, if someone is in another guild.[/list]

[b][color=orange]v4.39[/color], 18.12.2019[/b][list]
[*]Added styles on UnitFrames i missed.
[*]The DashBoard is now disabled by default.
[*]Updated skins.
[*]Fixed RaidCD font option.
[*]Added two buttons on the Talent Frame with Codex and Tome Items.
[*]Fixed an install error.[/list]

[b][color=orange]v4.38[/color], 06.12.2019[/b][list]
[*]Small Tweaks to the DPS Layout.
[*]Added a chat fade feature. Thanks to fgprodigal <3
[*]Added right click function to my RaidManager to open RaidPanel.
[*]Hide Coords will now also hide the Backdrop fron the LocPanel Coords.
[*]Added Color Option to GCD/Swing-Bar.
[*]Added wowhead links on World Frame & Achievement Frame.
[*]Added a System DashBoard to show FPS, MS and control Volume.[/list]


[b][color=orange]v4.37[/color], 26.11.2019[/b][list]
[*]DPS LAYOUT UPDATE: If you want it, do the install process again!!
[*]Added some animated stuff to gossip/quest frames.
[*]Updated Heal Prediction.
[*]Updated GCD Bar (disabled by default).
[*]Added a Swing Bar (disabled by default).
[*]AutoButtons can now use the Global Fade Transparency.
[*]Options cleanup.[/list]


[b][color=orange]v4.36[/color], 14.11.2019[/b][list]
[*]Changed some settings via install, which is now needed with the upcoming ElvUI update.
[*]Removed DBM skin. You can still get my style via AddOnSkins.
[*]Disable my Heal Prediction by default. Must figure out, why it dont work for some people.[/list]


[b][color=orange]v4.35[/color], 12.11.2019[/b][list]